[metadata]
name = bank-account-validator
version = 1.0.0
description = Python implementation for bank account validation.
long_description = file: README.md
description-file = README.md
author = Thais Ribeiro
author_email = thaisribeirodn@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
project_urls =
    Source = https://github.com/thaisribeiro/heimdall

[options]
include_package_data = true
packages = heimdall

[flake8]
max-line-length = 132
exclude = .tox,.git
ignore = F405,W504

[isort]
line_length = 132
multi_line_output = 5
known_tests = tests
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER,TESTS

[coverage:run]
source = heimdall

[bdist_wheel]
universal = 1
